[gd_scene load_steps=9 format=2]

[ext_resource path="res://modular/IrisButton.gd" type="Script" id=1]
[ext_resource path="res://styles/LightGreyStylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://modular/IrisButtonMat.tres" type="Material" id=3]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_1.tres" type="DynamicFont" id=4]
[ext_resource path="res://styles/GreenOutlineStylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://styles/YellowStylebox.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="IrisButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )

[node name="Control" type="ColorRect" parent="."]
material = ExtResource( 3 )
margin_left = 128.0
margin_top = -27.0
margin_right = 228.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 54 )
color = Color( 1, 1, 1, 0 )

[node name="Control" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 19.0
mouse_filter = 2

[node name="Button" type="Button" parent="Control"]
unique_name_in_owner = true
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = true

[node name="TextContainer" type="HBoxContainer" parent="Control/Button"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Control/Button/TextContainer"]
margin_right = 5.0
margin_bottom = 54.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2

[node name="Punctuation" type="Label" parent="Control/Button/TextContainer"]
unique_name_in_owner = true
margin_left = 9.0
margin_right = 22.0
margin_bottom = 54.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0.3"
valign = 1

[node name="Vehicle" type="Label" parent="Control/Button/TextContainer"]
unique_name_in_owner = true
margin_left = 26.0
margin_right = 57.0
margin_bottom = 54.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "CE1311"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_bottom = 1.0
margin_right = 10.0
rect_min_size = Vector2( 10, 0 )
custom_constants/margin_right = 14
custom_constants/margin_top = 14
custom_constants/margin_left = -9
custom_constants/margin_bottom = 14

[node name="SelectTag" type="Panel" parent="Control/MarginContainer"]
unique_name_in_owner = true
visible = false
margin_left = -9.0
margin_top = 14.0
margin_right = -4.0
margin_bottom = 40.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.292
margin_right = 0.708
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
custom_constants/margin_right = -13
custom_constants/margin_top = 1
custom_constants/margin_left = 14
custom_constants/margin_bottom = 1

[node name="RiskTagButton" type="Button" parent="Control/MarginContainer2"]
unique_name_in_owner = true
visible = false
margin_left = 14.0
margin_top = 1.0
margin_right = 23.0
margin_bottom = 53.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/MarginContainer2/RiskTagButton" to="." method="_on_RiskTagButton_pressed"]
